# Bot_addressbook

./: .dockerignore  AddressBook.py  Bot.py  Dockerfile  README.md  __init__.py  __main__.py  info.py  pyproject.toml  setup.py  Диаграмма без названия.drawio
